testing/regressionTests/results/orange/orange25/network-optimization.py.linux2.2.7.crash.txt
Traceback (most recent call last):
  File "/home/miha/work/orange/testing/regressionTests/xtest_one.py", line 97, in <module>
    execfile(t__name)
  File "network-optimization.py", line 17, in <module>
    networkOptimization.radial_fruchterman_reingold(100, 1000)
TypeError: NetworkOptimization.radialFruchtermanReingold() takes exactly 3 arguments (2 given)
